--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,9 +111,6 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/GoogleAPIKey" />
 
         <activity
             android:name=".wishlist.WishlistActivity"
@@ -179,6 +176,13 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
+            android:name=".search.SearchActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -187,6 +191,11 @@
             android:theme="@style/Base.Theme.AppCompat" />
 
         <service android:name=".location_service.LocationMonitoringService" />
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/GoogleAPIKey" />
 
         <service
             android:name=".fcm.MyFirebaseMessagingService"
@@ -202,7 +211,6 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
 
         <service
             android:name=".location.LocationServices"
